Fixed container centering issue by wrapping container & navbar in flex-container

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -48,7 +48,7 @@ h2{
 .section{
     background-color: white;
     padding-left: 15px;
-    padding-right: 15px; 
+    padding-right: 0px;
     margin-bottom: 30px; 
     border-radius: 10px;
 }
@@ -57,14 +57,25 @@ h2{
     padding: 15px;
 }
 
-.container {
-    padding-left: 315px; /* Same as the width of the sidenav + desired space between */
+#secondary-column{
+    padding-right: 0px;
+
+}
+
+/* Needed to keep container centered */
+.flex-container{
+    display: flex;
     padding-right: 15px;
+    flex-direction: row;
+}
+
+.container {
+    padding-left: 15px; /* Same as the width of the sidenav + desired space between */
+    padding-right: 15px;
+    padding-top: 15px;
     margin-left: auto;
     margin-right: auto;
     max-width: 1600px;
-
-    margin-top: 15px;
 }
 
 /* The sidenav */
@@ -74,9 +85,10 @@ nav > .header{
 }
 
 nav {
-    height: 100%;
+    min-height: 100%;
     width: 300px;
-    position: fixed;
+    position: relative;
+    float: left;
     z-index: 1;
     top: 0;
     left: 0;
@@ -92,7 +104,6 @@ nav a {
     font-size: 25px;
     color: #818181;
     display: block;
-    transition: 0.3s;
     text-align: center;
     font-family: 'Lato', sans-serif;
     font-weight: 100;
